Created new variable @syntax-comment-color to better support JSDoc

--- a/styles/base.less
+++ b/styles/base.less
@@ -18,7 +18,7 @@ atom-text-editor {
 }
 
 .comment {
-  color : desaturate(lighten(@dark-blue, 30%), 10%);
+  color : @syntax-comment-color;
 }
 
 .cursor-line {
