--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -9,6 +9,7 @@
 @syntax-selection-color  : lighten(@dark-blue, 10%);
 @syntax-background-color : @dark-blue;
 @syntax-variable-color   : @orange;
+@syntax-comment-color    : desaturate(lighten(@dark-blue, 30%), 10%);
 
 // Guide colors
 @syntax-wrap-guide-color          : darken(@dark-blue, 3%);
