Updated Dalton syntax for new Atom version

--- a/styles/entity.less
+++ b/styles/entity.less
@@ -8,6 +8,13 @@
   color: @mauve;
 }
 
+.meta.function-call,
+.meta.method-call {
+  .entity.name.function {
+    color: @light-grey;
+  }
+}
+
 .entity.tag,
 .entity.tag.scss {
   color: @cyan;
