--- a/styles/variable.less
+++ b/styles/variable.less
@@ -1,13 +1,17 @@
 @import "syntax-variables";
 
-.variable.language.js {
+.var.js {
   color: @purple;
 }
 
-.variable.other.php {
+.variable.language.js {
+  color : @purple;
+}
+
+.var.other.php {
   color : @light-grey;
 }
 
-.punctuation.definition.variable.php {
+.var.php {
   color : @light-grey;
 }
