Updated template string

--- a/index.less
+++ b/index.less
@@ -1,5 +1,6 @@
 @import "./styles/base.less";
 @import "./styles/constant.less";
+@import "./styles/support.less";
 @import "./styles/string.less";
 @import "./styles/markup.less";
 @import "./styles/property.less";
@@ -7,7 +8,6 @@
 @import "./styles/regexp.less";
 @import "./styles/css.less";
 @import "./styles/meta.less";
-@import "./styles/units.less";
 @import "./styles/storage.less";
 @import "./styles/keyword.less";
 @import "./styles/variable.less";
