--- a/styles/keyword.less
+++ b/styles/keyword.less
@@ -1,11 +1,19 @@
+.string.quoted.template .keyword.control,
 .keyword.control {
   color: @cyan;
 }
 
+.string.quoted.template .keyword.unit,
+.keyword.unit {
+  color: @purple;
+}
+
+.string.quoted.template .keyword.operator,
 .keyword.operator {
   color: @purple;
 }
 
+.string.quoted.template .keyword.operator.logical,
 .keyword.operator.logical {
   color : @purple;
 }
