--- a/styles/storage.less
+++ b/styles/storage.less
@@ -1,13 +1,16 @@
 @import "syntax-variables";
 
+.string.quoted.template .storage.type.function,
 .storage.type.function {
   color: @cyan;
 }
 
+.string.quoted.template .storage.type.arrow,
 .storage.type.arrow {
   color : @cyan;
 }
 
+.string.quoted.template .storage.modifier,
 .storage.modifier {
   color: @cyan;
 }
