--- a/styles/string.less
+++ b/styles/string.less
@@ -4,6 +4,16 @@
   color : @orange;
 }
 
+.string.quoted.template {
+  color : @orange;
+  .embedded {
+    color : @light-grey;
+  }
+  .punctuation.embedded {
+    color : @orange;
+  }
+}
+
 .attribute-selector .punctuation.string.css,
 .attribute-selector .punctuation.string.less,
 .attribute-selector .punctuation.string.scss {
