Fixed string escape character and styled the indent guide

--- a/styles/string.less
+++ b/styles/string.less
@@ -2,13 +2,19 @@
 
 .string.quoted {
   color : @orange;
+
+  .constant.character.escape {
+    color : @cyan;
+  }
 }
 
 .string.quoted.template {
   color : @orange;
+
   .embedded {
     color : @light-grey;
   }
+
   .punctuation.embedded {
     color : @orange;
   }
