--- a/styles/colors.less
+++ b/styles/colors.less
@@ -23,15 +23,15 @@
 @light-red        : #eeb2bf;
 @light-yellow     : #fff89b;
 @lighter          : #C4D5E0;
-@aqua             : #79e7ce;
+@aqua             : #7ef0d1;
 @lime             : #cae673;
 @blue             : #65a5ed;
 @cyan             : #70dff2;
-@green            : #a7e8a0;
+@green            : #7BEA9A;
 @grey             : #99b1d4;
 @orange           : #dac188;
 @periwinkle       : #8791f5;
-@mauve            : #a695f4;
+@mauve            : #a28af4;
 @purple           : #bb7ddd;
 @magenta          : #db72ac;
 @red              : #e07b8a;
