--- a/styles/constant.less
+++ b/styles/constant.less
@@ -1,5 +1,13 @@
 @import "syntax-variables";
 
+.constant.js {
+  color : @blue;
+}
+
+.constant.js + .period {
+  color : @blue;
+}
+
 .constant.numeric {
   color : @purple;
 }
