--- a/styles/support.less
+++ b/styles/support.less
@@ -1,5 +1,6 @@
 .string.quoted.template .support.class.js,
-.support.class.js {
+.support.class.js,
+.support.dom.js {
   color : @blue;
 }
 
@@ -8,8 +9,8 @@
   color : @blue;
 }
 
-.support.function.php,
 .string.quoted.template .support.function.js,
-.support.function.js {
+.support.function.js,
+.support.function.php {
   color : @cyan;
 }
