--- a/index.less
+++ b/index.less
@@ -7,7 +7,7 @@
 @import "./styles/entity.less";
 @import "./styles/regexp.less";
 @import "./styles/css.less";
-@import "./styles/meta.less";
+@import "./styles/module.less";
 @import "./styles/storage.less";
 @import "./styles/keyword.less";
 @import "./styles/variable.less";
