--- a/styles/colors.less
+++ b/styles/colors.less
@@ -37,3 +37,6 @@
 @red              : #e07b8a;
 @white            : #fff;
 @yellow           : #e9e38e;
+
+@comment-color    : desaturate(lighten(@dark-blue, 30%), 10%);
+@variable-color   : @orange;
