--- a/styles/entity.less
+++ b/styles/entity.less
@@ -20,11 +20,16 @@
   }
 }
 
-.entity.tag,
-.entity.tag.scss {
+.entity.tag {
   color : @grey;
 }
 
 .entity.pseudo-class {
   color : @grey;
+}
+
+.meta.method.declaration > {
+  .entity.function {
+    color : @green;
+  }
 }
