--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -7,9 +7,8 @@
 @syntax-text-color       : @dark;
 @syntax-cursor-color     : @dark-grey;
 @syntax-selection-color  : lighten(@dark-blue, 10%);
+@syntax-selection-flash-color : lighten(@dark-blue, 20%);
 @syntax-background-color : @dark-blue;
-@syntax-variable-color   : @orange;
-@syntax-comment-color    : desaturate(lighten(@dark-blue, 30%), 10%);
 
 // Guide colors
 @syntax-wrap-guide-color          : darken(@dark-blue, 3%);
