--- a/index.less
+++ b/index.less
@@ -1,13 +1,8 @@
 @import "./styles/base.less";
-@import "./styles/constant.less";
 @import "./styles/support.less";
 @import "./styles/string.less";
-@import "./styles/markup.less";
-@import "./styles/property.less";
 @import "./styles/entity.less";
-@import "./styles/regexp.less";
-@import "./styles/css.less";
 @import "./styles/module.less";
-@import "./styles/storage.less";
 @import "./styles/keyword.less";
-@import "./styles/variable.less";
+@import "./styles/features.less";
+@import "./styles/languages.less";
