Fixed editor panel color

--- a/index.less
+++ b/index.less
@@ -1,8 +1,5 @@
+@import "./styles/colors.less";
 @import "./styles/base.less";
-@import "./styles/support.less";
-@import "./styles/string.less";
-@import "./styles/entity.less";
-@import "./styles/module.less";
-@import "./styles/keyword.less";
+@import "./styles/editor.less";
 @import "./styles/features.less";
 @import "./styles/languages.less";
