--- a/styles/features.less
+++ b/styles/features.less
@@ -1,5 +1,9 @@
+@import './features/constant';
+@import './features/entity';
+@import './features/keyword';
+@import './features/module';
+@import './features/property';
 @import './features/regexp';
 @import './features/storage';
-@import './features/constant';
+@import './features/string';
 @import './features/variable';
-@import './features/property';
