--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -16,8 +16,8 @@
 @syntax-invisible-character-color : @light;
 
 // For find and replace markers
-@syntax-result-marker-color          : @dark;
-@syntax-result-marker-color-selected : darken(@light, 5%);
+// @syntax-result-marker-color          : @dark;
+// @syntax-result-marker-color-selected : darken(@light, 5%);
 
 // Gutter colors
 @syntax-gutter-text-color                : @dark;
