Fixed issue where Dalton would take over UI theme

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -11,7 +11,7 @@
 @light-aqua       : #8cfcd8;
 @light-blue       : #92cdf5;
 @light-cyan       : #a8fbfc;
-@light-grey       : #bed1ed;
+@light-grey       : lighten(@dark-blue, 60%);
 @light-green      : #b8ffb0;
 @light-magenta    : #eba5d1;
 @light-mauve      : #cec4f9;
