--- a/styles/base.less
+++ b/styles/base.less
@@ -4,7 +4,7 @@
 
 .comment,
 .source.yaml {
-  color : @comment-color
+  color : @comment-color;
 }
 
 .meta.brace.square {
@@ -17,4 +17,8 @@
 
 .meta.function .support.class {
   color : @cyan;
+}
+
+.support.function.console {
+  color : @blue;
 }
