tweaking class organization

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -23,6 +23,10 @@
   background-color : lighten(@dark-blue, 7%);
 }
 
+atom-text-editor::shadow .wrap-guide {
+  background-color : fade(darken(@dark-blue, 30%), 20%);
+}
+
 atom-text-editor::shadow .find-result .region,
 atom-text-editor .find-result .region {
   border-color : lighten(@dark-blue, 30%);
