--- a/styles/languages.less
+++ b/styles/languages.less
@@ -1,4 +1,7 @@
 @import './languages/css';
+@import './languages/elm';
 @import './languages/html';
+@import './languages/javascript';
 @import './languages/markup';
+@import './languages/php';
 @import './languages/typescript';
