--- a/styles/languages/typescript.less
+++ b/styles/languages/typescript.less
@@ -1,5 +1,7 @@
-.keyword.other.ts {
-  color : @cyan;
+.keyword.other.ts,
+.keyword.other.tsx,
+.keyword.others.tsx {
+  color : @purple;
 }
 
 .storage.type.tsx {
